@@ -1,6 +1,12 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  27 Aug 2002; Martin Schlemmer <azarah@gentoo.org> portage.py: if the dep
+  cache is stale, it is possible that aux_get() will call doebuild(depend)
+  to regenerate it again.  This call will cause $T to be set to "", which
+  will break anything that needs $T to be set to a writable location inside
+  the sandbox, so we need to set $T to a valid value again.
+
   27 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: improved error
   handling/detection of bad pkgsplit() and catpkgsplit() calls; should close
   bug #6803.
